--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
           <img src="./img/logo-git.png" alt="Logo Git">
           <h1>Blog Curso de Git</h1>
       </div>
+      <div>
+        El contenido del blog ira aqui
+      </div>
   </body>
 </html>
