--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <title>Blog Curso Git</title>
   </head>
   <body>
-      <div>
-          <img src="./img/logo-git.png" alt="Logo Git">
+      <div class="bar">
+          <img class="logo" src="./img/logo-git.png" alt="Logo Git" >
           <h1>Blog Curso de Git</h1>
       </div>
       <div>
