--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
       <div class="bar">
           <img class="logo" src="./img/logo-git.png" alt="Logo Git" >
-          <h1>Blog Curso de Git</h1>
+          <h1>Blog Curso de Git y GitHub</h1>
       </div>
       <div>
         El contenido del blog ira aqui
