--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css">
+    <script defer src="index.js"></script>
     <title>Blog Curso Git</title>
   </head>
   <body>
